--- a/app/src/main/res/layout/activity_write_question.xml
+++ b/app/src/main/res/layout/activity_write_question.xml
@@ -29,15 +29,15 @@
         android:layout_height="wrap_content"
         android:text="게시하기"
         style="@style/TextAppearance.App.BodySmall"
-        android:textColor="@color/white"
-        android:background="@drawable/bg_write_btn"
         android:includeFontPadding="false"
         android:paddingVertical="4dp"
         android:layout_marginEnd="2dp"
         android:paddingHorizontal="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/bg_write_btn_disabled"
+        android:textColor="@color/gray4" />
 
     <!-- 이미지 추가 + 썸네일 라인 -->
     <HorizontalScrollView
@@ -46,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
         android:scrollbars="none"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/tv_cancel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -92,24 +93,61 @@
             android:layout_marginStart="10dp" />
     </LinearLayout>
 
+    <EditText
+        android:id="@+id/et_title"
+        style="@style/TextAppearance.App.TitleMedium"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="12dp"
+        android:background="@android:color/transparent"
+        android:hint="제목"
+        android:textColor="@color/black"
+        android:maxLines="1"
+        android:inputType="textCapSentences"
+        app:layout_constraintTop_toBottomOf="@id/btn_anonymous"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <View
+        android:id="@+id/view_title_underline"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="6dp"
+        android:layout_marginTop="6dp"
+        android:background="@color/gray4"
+        app:layout_constraintTop_toBottomOf="@id/et_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <!-- 본문 작성 -->
     <EditText
         android:id="@+id/et_content"
         style="@style/TextAppearance.App.BodySmall"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="6dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="350dp"
         android:background="@android:color/transparent"
         android:gravity="top"
         android:textColor="@color/black"
         android:hint="내용을 입력하세요..."
         android:inputType="textMultiLine"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.916"
+        app:layout_constraintTop_toBottomOf="@id/view_title_underline"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_anonymous"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- 내용 입력 시에만 보이는 안내 문구 -->
+    <TextView
+        android:id="@+id/tv_hashtag_tip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="20dp"
+        android:text="#해시태그로 내 질문을 분류해보세요!"
+        style="@style/TextAppearance.App.BodySmall"
+        android:textColor="@color/gray4"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/et_content"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
