--- a/app/src/main/res/layout/fragment_cm_multi_profile_new.xml
+++ b/app/src/main/res/layout/fragment_cm_multi_profile_new.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/bg_bottomsheet"
     android:orientation="vertical"
-    android:padding="24dp"
-    android:background="@drawable/bg_bottomsheet">
+    android:padding="24dp">
 
     <TextView
         android:id="@+id/tv_multi_profile_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="멀티 프로필 추가"
         android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_gravity="center_horizontal" />
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/iv_profile_image"
@@ -28,12 +29,12 @@
         android:id="@+id/et_nickname"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="12dp"
         android:hint="닉네임 입력"
-        android:textSize="14sp"
-        android:layout_gravity="center_horizontal"
         android:textAlignment="center"
-        android:textColor="@color/gray3" />
+        android:textColor="@color/gray3"
+        android:textSize="14sp" />
 
     <EditText
         android:id="@+id/et_bio"
@@ -45,12 +46,51 @@
         android:textColor="@color/gray3"
         android:textSize="14sp" />
 
+    <LinearLayout
+        android:id="@+id/layout_default_join_profile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp">
+
+        <ImageView
+            android:id="@+id/iv_multi_profile_join_image"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_profile" />
+
+        <TextView
+            android:id="@+id/tv_default_profile_join_nickName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginHorizontal="15dp"
+            android:fontFamily="@font/roboto_semibold"
+            android:text="기본 프로필"
+            android:textColor="@color/point_purple"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_multi_profile_join_nickName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/roboto_medium"
+            android:text="가입"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
     <ImageButton
         android:id="@+id/btn_join"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
         android:background="@drawable/ic_cm_bottomsheet_join" />
 
 </LinearLayout>
