--- a/app/src/main/res/layout/item_multi_profile.xml
+++ b/app/src/main/res/layout/item_multi_profile.xml
@@ -43,7 +43,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/iv_profile_delete"
