feat: 로그인 기능 구현
- 로그인 화면 구현
- 로그인 API 연동

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -13,7 +13,7 @@
         android:layout_height="189dp"
         android:orientation="vertical"
 
-        android:background="@drawable/bg_profile_ex">
+        android:background="@drawable/bg_profile_no_bg">
 
         <LinearLayout
             android:id="@+id/ll_profile_wrapper"
