--- a/app/src/main/res/layout/item_question_detail.xml
+++ b/app/src/main/res/layout/item_question_detail.xml
@@ -40,6 +40,15 @@
             android:textColor="@color/point_green" />
     </LinearLayout>
 
+    <!-- 더보기 이미지 -->
+    <ImageView
+        android:id="@+id/iv_overflow"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:src="@drawable/ic_feed_overflow"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <!-- Q 아이콘 -->
     <ImageView
