--- a/app/src/main/res/layout/item_community.xml
+++ b/app/src/main/res/layout/item_community.xml
@@ -1,10 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/iv_icon"
-    android:layout_width="48dp"
-    android:layout_height="48dp"
-    android:layout_marginHorizontal="4dp"
-    android:adjustViewBounds="true"
-    android:scaleType="fitCenter"
-    android:background="@android:color/transparent"
-    android:src="@drawable/ic_home_no_community" />
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_root"
+    android:layout_width="85dp"
+    android:layout_height="85dp">
+
+    <!-- 아래: 실제 사진 -->
+    <ImageView
+        android:id="@+id/iv_community"
+        android:layout_width="61dp"
+        android:layout_height="61dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="5.5dp"
+        android:layout_marginStart="0.9dp"
+        android:scaleType="centerCrop"/>
+
+
+    <ImageView
+        android:id="@+id/iv_plus"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="4dp"
+        android:src="@drawable/ic_home_add_community"
+        android:scaleType="fitCenter"
+        android:visibility="gone" />
+
+    <!-- 위: 투명 내부 + 그라데이션 테두리 링 -->
+    <ImageView
+        android:id="@+id/iv_ring"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/ic_home_ring"
+        android:importantForAccessibility="no" />
+
+</FrameLayout>
