--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -29,7 +29,7 @@
             android:paddingVertical="10dp">
 
             <ImageView
-                android:id="@+id/iv_record_poster"
+                android:id="@+id/iv_record_info_poster"
                 android:layout_width="101dp"
                 android:layout_height="133dp"
                 android:src="@drawable/ig_poster_placeholder"
@@ -38,7 +38,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_record_title"
+                android:id="@+id/tv_record_info_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
@@ -47,12 +47,12 @@
                 android:textColor="@color/gray1"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/iv_record_poster"
+                app:layout_constraintStart_toEndOf="@+id/iv_record_info_poster"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <!-- 장소 -->
             <TextView
-                android:id="@+id/tv_record_theater_title"
+                android:id="@+id/tv_record_info_theater_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -60,11 +60,11 @@
                 android:text="장소:"
                 android:textColor="@color/gray1"
                 android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="@+id/tv_record_title"
-                app:layout_constraintTop_toBottomOf="@+id/tv_record_title" />
+                app:layout_constraintStart_toStartOf="@+id/tv_record_info_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_record_info_title" />
 
             <TextView
-                android:id="@+id/tv_record_theater"
+                android:id="@+id/tv_record_info_theater"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -72,13 +72,13 @@
                 android:text="TextView"
                 android:textColor="@color/gray1"
                 android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_record_theater_title"
-                app:layout_constraintStart_toEndOf="@+id/tv_record_theater_title"
-                app:layout_constraintTop_toTopOf="@+id/tv_record_theater_title" />
+                app:layout_constraintBottom_toBottomOf="@+id/tv_record_info_theater_title"
+                app:layout_constraintStart_toEndOf="@+id/tv_record_info_theater_title"
+                app:layout_constraintTop_toTopOf="@+id/tv_record_info_theater_title" />
 
             <!-- 기간 -->
             <TextView
-                android:id="@+id/tv_record_period_title"
+                android:id="@+id/tv_record_info_period_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -86,11 +86,11 @@
                 android:text="기간:"
                 android:textColor="@color/gray1"
                 android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="@+id/tv_record_title"
-                app:layout_constraintTop_toBottomOf="@+id/tv_record_theater_title" />
+                app:layout_constraintStart_toStartOf="@+id/tv_record_info_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_record_info_theater_title" />
 
             <TextView
-                android:id="@+id/tv_record_period"
+                android:id="@+id/tv_record_info_period"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -99,24 +99,24 @@
                 android:text="TextView"
                 android:textColor="@color/gray1"
                 android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_record_period_title"
-                app:layout_constraintStart_toEndOf="@+id/tv_record_period_title"
-                app:layout_constraintTop_toTopOf="@+id/tv_record_period_title" />
+                app:layout_constraintBottom_toBottomOf="@+id/tv_record_info_period_title"
+                app:layout_constraintStart_toEndOf="@+id/tv_record_info_period_title"
+                app:layout_constraintTop_toTopOf="@+id/tv_record_info_period_title" />
 
             <!-- 배우 -->
             <TextView
-                android:id="@+id/tv_record_casting_title"
+                android:id="@+id/tv_record_info_casting_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_regular"
                 android:text="배우:"
                 android:textColor="@color/gray1"
                 android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="@+id/tv_record_title"
-                app:layout_constraintTop_toBottomOf="@+id/tv_record_period_title" />
+                app:layout_constraintStart_toStartOf="@+id/tv_record_info_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_record_info_period_title" />
 
             <TextView
-                android:id="@+id/tv_record_casting"
+                android:id="@+id/tv_record_info_casting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -124,24 +124,24 @@
                 android:text="TextView"
                 android:textColor="@color/gray1"
                 android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_record_casting_title"
-                app:layout_constraintStart_toEndOf="@+id/tv_record_casting_title"
-                app:layout_constraintTop_toTopOf="@+id/tv_record_casting_title" />
+                app:layout_constraintBottom_toBottomOf="@+id/tv_record_info_casting_title"
+                app:layout_constraintStart_toEndOf="@+id/tv_record_info_casting_title"
+                app:layout_constraintTop_toTopOf="@+id/tv_record_info_casting_title" />
 
             <!-- 평균 별점 -->
             <TextView
-                android:id="@+id/tv_record_rating_avg_title"
+                android:id="@+id/tv_record_info_rating_avg_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_regular"
                 android:text="평균 별점:"
                 android:textColor="@color/gray1"
                 android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="@+id/tv_record_title"
-                app:layout_constraintTop_toBottomOf="@+id/tv_record_casting_title" />
+                app:layout_constraintStart_toStartOf="@+id/tv_record_info_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_record_info_casting_title" />
 
             <TextView
-                android:id="@+id/tv_record_rating_avg"
+                android:id="@+id/tv_record_info_rating_avg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -149,9 +149,9 @@
                 android:text="TextView"
                 android:textColor="@color/gray1"
                 android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_record_rating_avg_title"
-                app:layout_constraintStart_toEndOf="@+id/tv_record_rating_avg_title"
-                app:layout_constraintTop_toTopOf="@+id/tv_record_rating_avg_title" />
+                app:layout_constraintBottom_toBottomOf="@+id/tv_record_info_rating_avg_title"
+                app:layout_constraintStart_toEndOf="@+id/tv_record_info_rating_avg_title"
+                app:layout_constraintTop_toTopOf="@+id/tv_record_info_rating_avg_title" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -248,6 +248,37 @@
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_outer_casting"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:paddingVertical="10dp" >
+
+            <TextView
+                android:id="@+id/tv_record_casting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/roboto_semibold"
+                android:text="출연"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+                android:id="@+id/layout_casting_container"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                app:chipSpacing="8dp"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/tv_record_casting"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <LinearLayout
             android:id="@+id/layout_inner_content"
             android:layout_width="match_parent"
@@ -287,7 +318,7 @@
         </LinearLayout>
 
         <RatingBar
-            android:id="@+id/customRatingBar"
+            android:id="@+id/ratingbar_record"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
             android:layout_gravity="center"
