--- a/app/src/main/res/layout/fragment_book_index.xml
+++ b/app/src/main/res/layout/fragment_book_index.xml
@@ -10,6 +10,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:background="@android:color/white"
         android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
