--- a/app/src/main/res/layout/item_ticket_book_index.xml
+++ b/app/src/main/res/layout/item_ticket_book_index.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
@@ -21,8 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"
-        app:cardElevation="10dp"
         app:cardCornerRadius="3dp"
+        app:cardElevation="10dp"
         app:cardUseCompatPadding="true">
 
         <ImageView
