--- a/app/src/main/res/layout/item_comment_detail.xml
+++ b/app/src/main/res/layout/item_comment_detail.xml
@@ -78,10 +78,9 @@
             android:layout_marginEnd="32dp"
             android:text="텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트"
             android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_feed_userid"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_feed_userid"            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/tv_feed_userid"
+            app:layout_constraintStart_toEndOf="@+id/tv_feed_username"
             app:layout_constraintTop_toTopOf="@+id/tv_feed_username" />
 
 
