--- a/app/src/main/res/layout/fragment_signup_step1.xml
+++ b/app/src/main/res/layout/fragment_signup_step1.xml
@@ -89,18 +89,19 @@
 
     <!-- 생년월일 -->
     <EditText
-        android:visibility="gone"
         android:id="@+id/et_birth"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="28dp"
         android:background="@android:color/transparent"
-        android:hint="생년월일"
+        android:hint="생년월일 (YYYYMMDD)"
         style="@style/TextAppearance.App.LabelSmall"
         android:textColor="@color/gray3"
         android:textColorHint="@color/gray3"
-        android:inputType="date"
+        android:inputType="number"
+        android:digits="0123456789"
+        android:maxLength="8"
         android:maxLines="1"
         android:includeFontPadding="false"
         android:minHeight="0dp"
@@ -112,7 +113,6 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <View
-        android:visibility="gone"
         android:id="@+id/line_birth"
         android:layout_width="0dp"
         android:layout_height="1dp"
@@ -134,6 +134,21 @@
         android:textColor="@color/point_red"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/line_email"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_birth_error"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="3dp"
+        android:text="생년월일은 8자리로 입력하세요"
+        style="@style/TextAppearance.App.LabelTiny"
+        android:textColor="@color/point_red"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/line_birth"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
