--- a/app/src/main/res/layout/view_comment_bar.xml
+++ b/app/src/main/res/layout/view_comment_bar.xml
@@ -11,6 +11,7 @@
     android:background="@color/white">
     
     <ImageView
+        android:visibility="visible"
         android:id="@+id/iv_profile"
         android:layout_width="36dp"
         android:layout_height="36dp"
