--- a/app/src/main/res/layout/top_bar.xml
+++ b/app/src/main/res/layout/top_bar.xml
@@ -58,7 +58,7 @@
     <ImageView
         android:id="@+id/iv_logo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="47dp"
         android:layout_marginBottom="46dp"
         android:src="@drawable/ic_logo"
         app:layout_constraintBottom_toBottomOf="@id/iv_top_bg"
