feat: 스플래시 화면 구현
- 스플래시 화면 구현
- 화면 비율 수정
- 팝업 메뉴 수정

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.MyOT" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <!-- 상태바 아이콘을 어둡게 (검정) 표시 -->
         <item name="android:windowLightStatusBar">true</item>
+
+        <!-- 시스템 바 색상 설정 -->
+        <item name="android:statusBarColor">@android:color/white</item>
+        <item name="android:navigationBarColor">@android:color/white</item>
     </style>
 
     <style name="Theme.MyOT" parent="Base.Theme.MyOT" />
