--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -28,7 +28,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="446dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/ig_community_profile_sample"
+                    android:src="@drawable/ig_poster_placeholder"
                     app:layout_collapseMode="pin"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +60,7 @@
                     android:layout_marginTop="300dp"
                     android:fontFamily="@font/roboto_bold"
                     android:text="배우명"
-                    android:textColor="@color/gray1"
+                    android:textColor="@color/white"
                     android:textSize="57sp"
                     app:layout_collapseMode="parallax"
                     app:layout_constraintEnd_toEndOf="parent"
